        instead of else(...). Example:
            switch (dir) do (
              case (north, south) return (1)
              case (else)         return (0)
            )
      * "else if" is a shortcut which lets you omit a pair of brackets:
            if (condition) then (...)
            else if (condition 2) then (...)
            else (...)
      [Ralph]

  * Stuff Only Developers Will Notice

July 31 2012 [Alectormancy+2]

  * Bugfixes
    * An arrow key fix from Alectormancy+1 broke adding new sprite
      sets in the sprite editor. This release fixes it properly.

July 27 2012 [Alectormancy+1]

  * Bugfixes
    * Fix the arrow key problem in Custom on Mac OS X
    * Fix new enemy formations being filled with enemy 0 instead of
      empty slots
    * NPCs that are intended to disappear when a text box advances
      no longer disappear when it first opens.
    * Mac OS X version now defaults to your Documents folder instead of
      defaulting to the Applications folder
    * Fix "Distribute Game as Mac OS X App" when running on Windows
    * Fix "Distribute Game as Debian Package" when running on Mac OS X
    * Fix "Distribute Game as Windows Installer" when running from
      Linux+Wine
    * Fix distribute failures caused by trying to download support
      utilities into read-only locations.
    * Use curl when wget isn't available

  * Update to Vikings of Midgard

Jun 15 2012 [Alectormancy]

  * New Features
    * Adjustable global HP thresholds for hero and enemy Weak states
      (hero graphics and enemy desperation attacks) [Adam Perry]
    * New in-game debug key: CTRL+F4 to view/edit/export the slice
      tree with the slice collection editor [Ralph]
    * A general game option to change how the inventory Autosort
      option works [Ralph]
    * Master Palettes menu: added export option [Ralph]
    * Play-as-you-edit, AKA live previewing of games, with a new
      "Test Game" option in Custom. Still unfinished! [Ralph]