@@ -555,6 +555,7 @@ define function, begin
 540,checkonetime,1,0             #returns the value of a onetime npc tag
 541,setonetime,2,0,0             #set onetime npc tag(#,true/false)
 542,microseconds,0               #microsecond timer
+543,enemyelementalresistasint,2,0,0  #get percentage elemental damage for an enemy (id, element)
 end
 
 #--------------------------------------------------------------------------
